2001-10-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:
	* generic/tk.h:
	* mac/README:
	* unix/Makefile.in:
	* unix/README:
	* unix/aclocal.m4:
	* unix/configure:
	* unix/configure.in:
	* unix/tcl.m4:
	* unix/tk.spec:
	* win/Makefile.in:
	* win/makefile.vc:
	* win/README:
	* win/configure:
	* win/configure.in:
	* win/tcl.m4: updated patchlevel to 8.3.4.
	updated READMEs to point to www.tcl-tk.net where applicable.
	added proper Win64 support to makefiles.

2001-09-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure: regen'ed
	* unix/aclocal.m4: added --enable-64bit support for HP-11 with the
	64-bit kernel.

2001-09-15  Don Porter <dgp@users.sourceforge.net>

	* doc/getOpenFile.n: Removed docs for the -multiple and
	-message options that are not provided in Tk 8.3.  They
	are only available in Tk 8.4.  [Bug 461760]

2001-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* generic/tkImgGIF.c:
	* generic/tkImgPPM.c:
	* generic/tkImgPhoto.c:
	* generic/tkMenu.c: Applied patch [461578], provided by Vincent
	  Darley. This fixes several memory leaks in the image code. They
	  happen if there are errors during the initialization of the
	  channel the image is supposed to be read from.

2001-08-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (ChooseDirectoryHookProc): work-around for MS
	bug that caused crashing in tk_chooseDirectory on Win95.
	[Bug #224936] (baker)

	* unix/tkUnixWm.c (TkWmRestackToplevel): reworked how
	ConfigureNotify requests were handled in relation to the parent to
	avoid the problem with potential 'raise' delays on some wms.
	[Bug #220260] (baker) wms that were affected should notice the
	difference in tests unixWm-51.* not failing that failed before.

2001-08-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkWindow.c (Initialize): added call to Tcl_SetMainLoop.
	This only has effect when tclsh is run (not wish), and then Tk is
	loaded in interactively.

2001-08-24  Jeff Hobbs  <jeffh@ActiveState.com>
